--- a/app/src/main/res/layout/item_vehicle.xml
+++ b/app/src/main/res/layout/item_vehicle.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vehicleModel"
-            type="com.noelHuibers.counterapp.model.VehicleModel" />
+            type="com.noelHuibers.counterapp.model.CountingObjectModel" />
 
         <variable
             name="vehiclesViewModel"
