Added Delete(); DeleteAll() & Customizability improved
Delete(), DeleteAll() are in the XML and VieModel now, Icon is Customizable & Name is Customizable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:fontFamily="@font/roboto_regular"
-                    android:text="@string/counter"
+                    android:text="@string/count_it"
                     android:textColor="?attr/shark_geyser"
                     android:textSize="20sp"
                     tools:ignore="ObsoleteLayoutParam,RtlHardcoded,UseCompoundDrawables" />
